# ckb-production-scripts

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
c/: always_success.c  anyone_can_pay.c  auth.c  auth.syms  blake2b.h  cardano_lock.c  cardano_lock.mol  cardano_lock_inc.h  cardano_lock_mol.h  cardano_lock_mol2.h  ckb_auth.h  ckb_exec.h  ckb_identity.h  ckb_keccak256.h  common.h  compact_udt.mol  compact_udt_lock.c  compact_udt_lock.h  compact_udt_lock_reader.h  compact_udt_mol.h  compact_udt_mol2.h  conversion.h  debug.h  dump_secp256k1_data.c  dump_secp256k1_data_20210801.c  omni_lock.c  omni_lock_mol.h  omni_lock_mol2.h  omni_lock_supply.h  omni_lock_time_lock.h  opentx.h  rc_lock.c  rc_lock.mol  rc_lock_acp.h  rc_lock_mol.h  rc_lock_mol2.h  rc_lock_supply.h  rc_lock_time_lock.h  rce.h  rce_validator.c  (+20 more)
c/nanocbor/: decoder.c  endian.h
docs/: ckb-anyone-can-pay.md  validate-signature-rsa.md
examples/auth-demo/: Makefile  auth_demo.c
examples/validate-signature-rsa/: Cargo.toml  README.md  build-without-capsule.sh  capsule.toml
examples/validate-signature-rsa/contracts/validate-signature-rsa/: Cargo.toml  build.rs
examples/validate-signature-rsa/contracts/validate-signature-rsa/src/: code_hashes.rs  entry.rs  error.rs  main.rs
examples/validate-signature-rsa/dynamic-libray/: .gitignore
examples/validate-signature-rsa/tests/: Cargo.toml
src/: lib.rs
src/tests/: anyone_can_pay.rs  mod.rs  secp256k1_compatibility.rs  xudt_rce.rs  xudt_rce_mol.rs
tests/auth/: CMakeLists.txt  Makefile  auth_sim.c  ckb_syscall_auth_sim.h  run.sh
tests/auth_rust/: Cargo.toml  run.sh
tests/auth_rust/tests/: misc.rs  test_auth_demo.rs
tests/auth_spawn_rust/: Cargo.toml  Makefile
tests/auth_spawn_rust/src/: auto_complete.rs  combine_lock_mol.rs  hash.rs  lib.rs  smt.rs
tests/auth_spawn_rust/templates/: auth-spawn-success.json
tests/cardano_lock/: CMakeLists.txt  cardano_lock_sim.c  run.sh  sim_ckb_syscalls.h
tests/cardano_lock/fuzz_ed25519/: Makefile  ed25519_coverage.c  ed25519_fuzzer.c
tests/cardano_lock/fuzz_nanocbor/: Makefile  cardano_fuzzer.c  clear_cache.sh
tests/cardano_lock_rust/: Cargo.toml
tests/cardano_lock_rust/src/: cardano_lock_mol.rs  lib.rs
tests/cardano_lock_rust/tests/: misc.rs  test_cardano_lock.rs
tests/compact_udt/: .gitignore  CMakeLists.txt  compact_udt_virtual_data.cpp  compact_udt_virtual_data.h  get_unittest_data_dir.sh  run-coverage.sh  run-sanitizer.sh  run.sh  test_compact_udt_data.h  test_compact_udt_lock.c  test_compact_udt_lock.cpp  testing_results.md
tests/compact_udt/simulator/: autogenerate_data.h  ckb_syscall_auth_sim.c  ckb_syscall_auth_sim.h  ckb_syscall_cudt_sim.c  ckb_syscall_cudt_sim.h  compact_udt_cc.cpp  compact_udt_cc.h  compact_udt_lock_inc.c  compact_udt_lock_inc.gcno  compact_udt_lock_inc.h  dump_data.cpp  dump_data.h
tests/compact_udt/util/: ckb_syscall_cudt_sim.c  ckb_syscall_cudt_sim.h  utest.h  util.c  util.cpp  util.h  util_secp256k1.c
tests/compact_udt_rust/: Cargo.toml
tests/compact_udt_rust/src/: compact_udt_mol.rs  dummy_data_loader.rs  dump_data.rs  lib.rs
tests/compact_udt_rust/test_data/: failed_amount_overflow.json  failed_enough_deposit.json  failed_enough_fee.json  failed_has_itself_deposit.json  failed_identity.json  failed_no_signature.json  failed_nonce_overflow.json  failed_other_output_invalid.json  failed_out_amount_too_much.json  failed_same_type_id.json  failed_smt_proof_is_empty.json  failed_sudt.json  failed_transfer_itself.json  failed_transfer_no_user.json  failed_transfer_sign.json  failed_transfer_sign_empty.json  failed_transfer_type_betweem_itself.json  failed_version.json  faliled_def_user.json  success_amount_near_overflow.json  success_from_spec.json  success_mulit_all_cudt.json  success_single_cell.json  success_single_no_identity.json
tests/compact_udt_rust/tests/: misc.rs  test_compact_udt.rs
tests/omni_lock/: CMakeLists.txt  ckb_syscall_omni_lock_sim.h  omni_lock_sim.c  run.sh  utest.h
tests/omni_lock/exec_fuzzer/: .gitignore  Makefile  exec_coverage.c  exec_func.h
tests/omni_lock_rust/: Cargo.toml
tests/omni_lock_rust/src/: ckb_sys_call.rs  debug_utils.rs  dummy_data_loader.rs  lib.rs  opentx.rs
tests/omni_lock_rust/tests/: misc.rs  test_anyone_can_pay.rs  test_multisig.rs  test_omni_lock.rs  test_opentx.rs  test_secp256k1_compatibility.rs  test_sudt_supply.rs
tests/rc_lock/: CMakeLists.txt  ckb_syscall_rc_lock_sim.h  rc_lock_sim.c  run.sh
tests/rc_lock/exec_fuzzer/: Makefile  exec_func.h  exec_fuzzer.c
tests/rc_lock_rust/: Cargo.toml
tests/rc_lock_rust/src/: lib.rs  rc_lock.rs
tests/rc_lock_rust/tests/: misc.rs  test_anyone_can_pay.rs  test_multisig.rs  test_rc_lock.rs  test_secp256k1_compatibility.rs  test_sudt_supply.rs
tests/rsa_sighash_all/: ckb_syscall_sim.h  rsa_sighash_all_usesim.c  run.sh
tests/taproot_lock/: CMakeLists.txt  ckb_syscall_taproot_lock_impl.h  ckb_syscall_taproot_lock_sim.h  example_script.c  exec_script.Makefile  exec_script_0.c  run.sh  taproot_lock_sim.c
tests/taproot_lock_rust/: Cargo.toml
tests/taproot_lock_rust/src/: lib.rs  taproot_lock.rs
tests/taproot_lock_rust/tests/: misc.rs  test_taproot.rs
tests/validate_signature_rsa/: Makefile  ckb_syscall_dlopen_sim.h  ckb_syscalls.h  dlopen_fuzzer.c  dlopen_sim.c  run-in-vm.sh  run.sh  testing_results.md  validate_signature_rsa_sim.c
tests/xudt_rce/: CMakeLists.txt  ckb_syscall_rce_validator_sim.h  ckb_syscall_xudt_sim.h  dump.h  extension_script_0.c  extension_script_1.c  extension_scripts.Makefile  owner_script.c  run.sh  run_validator.sh  testing_report.md  validate.syms  xudt_rce_sim.c  xudt_rce_validator_sim.c
tests/xudt_rce/smt_fuzzer/: Makefile  smt_func.h  smt_fuzzer.c
tests/xudt_rce_rust/: Cargo.toml
tests/xudt_rce_rust/src/: lib.rs  xudt_rce_mol.rs
tests/xudt_rce_rust/tests/: misc.rs  test_xudt_rce.rs  test_xudt_rce_validator.rs
xudt/: Cargo.toml
xudt/src/: lib.rs  xudt_rce_mol.rs
xudt/tests/: misc.rs  test_xudt_rce.rs  test_xudt_rce_validator.rs
(+13 files in other folders)
