[package]
name = "auth-lock-test"
version = "0.1.0"
authors = ["joii <joii@cryptape.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
ckb-vm = "=0.20.0-rc1"
ckb-crypto = "=0.100.0-rc2"
ckb-error = "=0.100.0-rc2"
ckb-hash = "=0.100.0-rc2"
ckb-script = "=0.100.0-rc2"
ckb-traits = "=0.100.0-rc2"
ckb-types = "=0.100.0-rc2"
ckb-chain-spec = "=0.100.0-rc2"
lazy_static = "1.3.0"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2dce546"}
openssl = "0.10.4"
sha3 = "0.9.1"

[dev-dependencies]
log = { version = "0.4.14", features = ["std"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
secp256k1 = { version = "0.19", features = ["rand-std", "recovery"] }
dyn-clone = "1.0.4"
