[package]
name = "auth-lock-test"
version = "0.1.0"
authors = ["joii <joii@cryptape.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
ckb-vm = "=0.20.0-rc1"
ckb-crypto = "=0.109.0"
ckb-error = "=0.109.0"
ckb-hash = "=0.109.0"
ckb-script = "=0.109.0"
ckb-traits = "=0.109.0"
ckb-types = "=0.109.0"
ckb-chain-spec = "=0.109.0"
lazy_static = "1.3.0"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2dce546"}
sha3 = "0.9.1"
sha2 = "0.10.6"
mbedtls = "0.8.1"

[dev-dependencies]
log = { version = "0.4.14", features = ["std"] }
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
secp256k1 = { version = "0.22.1", features = ["rand-std", "recovery"] }
dyn-clone = "1.0.4"
