[package]
name = "compact_udt_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-vm = "=0.20.0-rc1"
ckb-chain-spec = "=0.100.0-rc2"
ckb-script = "=0.100.0-rc2"
ckb-types = "=0.100.0-rc2"
ckb-error = "=0.100.0-rc2"
ckb-traits = "=0.100.0-rc2"
ckb-crypto = "=0.100.0-rc2"
ckb-hash = "=0.100.0-rc2"

dyn-clone = "1.0.4"
rand = "0.8.4"
sparse-merkle-tree = "0.5.2"
super = "0.0.0"
molecule = "0.7.1"
lazy_static = "1.4.0"

[dev-dependencies]

