[package]
name = "taproot-lock-test"
version = "0.1.0"
authors = ["xjd <xjd@cryptape.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
ckb-crypto = "0.103.0"
ckb-error = "0.103.0"
ckb-hash = "0.103.0"
ckb-script = "0.103.0"
ckb-traits = "0.103.0"
ckb-types = "0.103.0"
ckb-chain-spec = "0.103.0"
lazy_static = "1.3.0"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "dddbed3"}
openssl = "0.10.4"
sha3 = "0.9.1"
secp256k1 = "0.20.3"
env_logger = "0.9.0"
log = "0.4.14"
