[package]
name = "xudt-test"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
ckb-crypto = "0.40.0"
ckb-error = "0.40.0"
ckb-hash = "0.40.0"
ckb-script = "0.40.0"
ckb-traits = "0.40.0"
ckb-types = "0.40.0"
lazy_static = "1.3.0"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", branch = "master"}
