[package]
name = "xudt-test"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-rs = "0.1"
ckb-crypto = "0.105.1"
ckb-error = "0.105.1"
ckb-hash = "0.105.1"
ckb-script = "0.105.1"
ckb-traits = "0.105.1"
ckb-types = "0.105.1"
lazy_static = "1.3.0"
rand = "0.6.5"
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "2ba5a95"}

