[package]
name = "validate-signature-rsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
blake2b-ref = { version = "0.1", default-features = false }


[build-dependencies]
blake2b-rs = "0.1.5"
