[package]
name = "validate-signature-rsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the changes is under review, when it's ready, it will point to
# https://github.com/nervosnetwork/ckb-std.git
ckb-std = {git = "https://github.com/XuJiandong/ckb-std.git", branch="fix-build-rs"}
blake2b-ref = { version = "0.1", default-features = false }


[build-dependencies]
blake2b-rs = "0.1.5"
